Improved semantics and fixed bullet spacing
Changed divs to <header> and <main>, then rearranged the items accordingly. The page is now laid out in a more sensible and semantically sound way.

--- a/css/validate.css
+++ b/css/validate.css
@@ -16,17 +16,19 @@ label{
 li{
     /*Changes bullet points to a specific unicode character*/
     list-style-type: "\1F393";
-    padding-left: 5px;
+    padding-left: 2px;
 }
 a{
     color: rgba(255, 166, 0, 0.863);
     text-decoration: none;
 }
-.formContainer{
+header{
+    text-align: center;
+}
+main{
     width: 100%;
     display: flex;
     justify-content: center;
-    text-align: center;
 }
 .formStyle{
     /*Places labels and inputs in a grid so that the form looks tabular and less messy*/
